--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^4.0.2"
+    "react-navigation-header-buttons": "^4.0.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
